支持根据Date类型进行查询